--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </a>
             <ul class="nav-list">
                 <li class="nav-item">
-                    <a href="#hero" class="nav-link">Home</a>
+                    <a href="#parallax" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#theme" class="nav-link">Theme</a>
@@ -43,27 +43,21 @@
 </header>
 <!-- Header ends -->
 
-<section class="hero" id="hero">
-    <div class="container">
-        <h2 class="sub-headline htitle">
-            <span class="first-letter">F</span>ragmag<br><br><br><span class="first-letter">2</span>k21
-        </h2>
-        <h1 class="headline">Finding Ikigai</h1>
-        <div class="headline-description">
-            <div class="separator">
-                <div class="line line-left"></div>
-                <div class="asterisk"><i class="fas fa-asterisk"></i></div>
-                <div class="line line-right"></div>
-            </div>
-            <div class="single-animation">
-                <h5>Discover your Purpose</h5>
-                <a href="#theme" class="btn cta-btn land-btn">Explore</a>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Hero ends -->
+<div class="keyart" id="parallax">
+    <div class="keyart_layer parallax" id="keyart-0" data-speed="2"></div>		<!-- 00.0 -->
+    <div class="keyart_layer parallax" id="keyart-1" data-speed="5"></div>	<!-- 12.5 -->
+    <div class="keyart_layer parallax" id="keyart-2" data-speed="11"></div>		<!-- 25.0 -->
+    <div class="keyart_layer parallax" id="keyart-3" data-speed="16"></div>	<!-- 37.5 -->
+    <div class="keyart_layer parallax" id="keyart-4" data-speed="26"></div>		<!-- 50.0 -->
+    <div class="keyart_layer parallax" id="keyart-5" data-speed="36"></div>	<!-- 62.5 -->
+    <div class="keyart_layer parallax" id="keyart-6" data-speed="49"></div>		<!-- 75.0 -->
+    <div class="keyart_layer" id="keyart-scrim"></div>
+    <div class="keyart_layer parallax" id="keyart-7" data-speed="69"></div>		<!-- 87.5 -->
+    <div class="keyart_layer" id="keyart-8" data-speed="100"></div>		<!-- 100. -->
+</div>
 
+<!-- Hero ends -->
+<div class="restofcontent">
 <section class="discover-our-story" id="theme">
     <div class="container">
         <div class="restaurant-info">
@@ -534,7 +528,7 @@
 <footer id="footer">
     <div class="container">
         <div class="back-to-top">
-            <a href="#hero"><i class="fas fa-chevron-up"></i></a>
+            <a href="#parallax"><i class="fas fa-chevron-up"></i></a>
         </div>
         <div class="footer-content">
             <div class="footer-content-about animate-top">
@@ -569,7 +563,7 @@
         </div>
     </div>
 </footer>
-
+</div>
 
 
 
